The finished project of name-it, giving space in searchbox is still buggy

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+
+    <!-- Manually added links-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <link href="https://fonts.googleapis.com/css2?fam..." rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?fam..." rel="stylesheet">
+
+    <!-- Manual intervention ends here-->
     <title>React App</title>
   </head>
   <body>
